11712406-project1/test/test_11712406_1.out
Error type B at Line 1: assign value at global range!
Error type B at Line 1: Missing close brace
