11712406-project1/test/test_11712406_1.spl
float c = 2;
int a

